imp: add user and book entities and services